# tiny-coin-py

./: pyproject.toml
scripts/: install.sh
src/: binary_buffer.py
src/crypto/: base58_ext.py  ecdsa_ext.py  merkle_tree.py  ripemd160_ext.py  wallet.py
src/tiny_coin/: binary_buffer.py  deserializable.py  generics.py  net_params.py  serializable.py  utils.py
src/tiny_coin/crypto/: base58_ext.py  merkle_tree.py  sha256_ext.py  wallet.py
src/tiny_coin/p2p/: msg_serializer.py
src/tiny_coin/tx/: tx_in.py  tx_out.py  tx_out_point.py
src/tiny_coin/txs/: tx.py  tx_in.py  tx_out.py  tx_out_point.py  unspent_tx_out.py
tests/: test_binary_buffer.py  test_crypto.py  test_merkle_tree.py  test_msg.py  test_serialization.py  test_wallet.py
