[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny_coin"
version = "0.0.3"
description = "a tiny implementation of a cryptocurrency"
authors = [{ name = "Dorukhan Tokay", email = "tokay.dorukhan@hotmail.com" }]
requires-python = ">=3.12"
dependencies = ["base58~=2.1.1", "cryptography~=41.0.5"]

[project.optional-dependencies]
dev = ["pytest~=7.4.3"]
